2002-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Use draw.h drawing APIs to draw on image.
  	This means that MVG output no longer comes from code in
 	Drawable.cpp.

2002-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/STL.cpp: Moved function object implementations from STL.h to
 	STL.cpp.

2002-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstPixels): Changed offset parameter type
 	from 'unsigned int' to 'int'.
	(getPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.
	(setPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.
	(cacheThreshold): Changed argument type from 'const long' to
 	'const int'.
	(matteFloodfill): Changed offset parameter type from 'const long' to
 	'const int'.

	* lib/Pixels.cpp (getConst): New method to return read-only pixels.
	(get): Offset parameter types changed from 'unsigned int' to 'int'.

2002-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Drawable.h (DrawableDashOffset): Change dashoffset
 	type to 'double' rather than 'unsigned int' in order to match
 	ImageMagick.

	* lib/Drawable.cpp (DrawableDashArray): Change dasharray type to
 	'double' rather than 'unsigned int' in order to match
 	ImageMagick. Previous 'unsigned int' methods remain for
 	compatability reasons.

2002-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Always output
 	composite images as inlined Base64.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): If magick attribute
 	string is specified, then composite image is supplied to
 	ImageMagick as inlined Base64 rather than by MPRI reference.

	* lib/Blob.cpp (base64): Added methods to update Blob with data
 	from Base64-encoded string, or to return a Base64-encoded string
 	from Blob.  Still needs documentation.
